# EquiSite

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  infer.py  predict.py  pyproject.toml  train.py
dataset/: __init__.py
dataset/DNA_Check/: PBdataset.py  __init__.py
dataset/PATP/: PBdataset.py
dataset/PCA/: PBdataset.py
dataset/PHEM/: PBdataset.py  __init__.py
dataset/PMG/: PBdataset.py  __init__.py
dataset/PMN/: PBdataset.py  __init__.py
dataset/RNA_Check/: PBdataset.py  __init__.py
dataset/dna_check/: DNA-129_Test.txt  DNA-181_Test.txt  DNA-573_Train.txt  protein_binding_dataset.py
dataset/patp/: ATP-388_Train.txt  ATP-41_Test.txt  __init__.py  protein_binding_dataset.py
dataset/pca/: CA-1022_Train.txt  CA-515_Test.txt  __init__.py  protein_binding_dataset.py
dataset/phem/: HEM-175_Train.txt  HEM-96_Test.txt  protein_binding_dataset.py
dataset/pmg/: MG-1194_Train.txt  MG-651_Test.txt  protein_binding_dataset.py
dataset/pmn/: MN-144_Test.txt  MN-440_Train.txt  protein_binding_dataset.py
dataset/rna_check/: RNA-117_Test.txt  RNA-495_Train.txt  protein_binding_dataset.py
dataset/utils/: PyMolIO.py  PyMolecule.py  PyProtein.py  __init__.py  py_mol_io.py  py_molecule.py  py_periodic_table.py  py_protein.py
equisite/: __init__.py  _constants.py  _device.py  _graph_builder.py  _hdf5_io.py  _inference_runner.py  _model_loader.py  _pdb_cleaning.py  _pipeline.py  _types.py  predictor.py
equisite/data/: __init__.py  _paths.py
equisite/datasets/: __init__.py  _spec.py
equisite/model/: __init__.py  _core.py  _model.py  _pipeline.py  _pretrained.py  _result.py  equisite_t3_pro.py
equisite/preprocessing/: __init__.py  _esm.py  _geometry.py  _hdf5_io.py  _inference_runner.py  _pdb_cleaning.py  py_molecule.py  py_protein.py
equisite/utils/: __init__.py  loss.py  padding.py
examples/notebook_outputs/: 3HXQ-protein_predictions.csv  3HXQ-protein_predictions.json
model/: __init__.py  equisite_t3_pro.py  features_equi_t3_pro.py
notebooks/: inference.ipynb
tests/: conftest.py
utils/: __init__.py  loss.py  padding.py  valid_metrices.py
(+33 files in other folders)
